--- a/src/main/webapp/js/components/car-list/car-list.css
+++ b/src/main/webapp/js/components/car-list/car-list.css
@@ -14,6 +14,17 @@ tr td {
     display: none;
 }
 
-.disable {
-    
+.buy {
+    font-weight: bold;
+    background-color: lightblue;
+}
+
+.delete {
+    font-weight: bold;
+    background-color: rgb(216, 48, 48);
+}
+
+.re-stock {
+    font-weight: bold;
+    background-color: rgb(35, 233, 68);
 }
